--- a/Read More and Read Less/style.css
+++ b/Read More and Read Less/style.css
@@ -47,6 +47,19 @@ header h2 {
 }
 
 /* JavaScript */
-.content-container-2.toggle {
+.cont/////////////////
+//////////////////
+////////////////////
+///////////////////
+////////////////
+//////////////////
+/////////////////
+////////////////
+/////////////////
+//////////////
+//////////////////////
+////////////////
+//////////////////
+///////////////////ent-container-2.toggle {
   display: block;.
 }
